hard-gists/6947661/run.log
=== Docker Run Log for 6947661 ===
Started at: Mi 29. Okt 16:45:01 CET 2025

[2025-10-29 16:45:02] START: Running container for 6947661
[2025-10-29 16:45:02] SUCCESS: Container 47b7866b6e0a22f039fd0614e8ff8ee3a1b22ec912aaa595ecebf9a57723990b started for 6947661
=== Container logs for 6947661 ===
  File "/snippet.py", line 16
    print getLikes(args[0])
    ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6947661 ===
[2025-10-29 16:45:04] INFO: Container 47b7866b6e0a22f039fd0614e8ff8ee3a1b22ec912aaa595ecebf9a57723990b has stopped
